# egline-server

./: .env  .gitignore  Cargo.toml  README.md  db_init.bat  db_init.sh
migration/src/: lib.rs  m20240427_083430_create_table_book.rs  m20240427_164602_create_table_genre.rs  m20240427_164712_create_table_author.rs  m20240427_222412_create_table_user.rs  m20240427_223114_create_table_chapter.rs  m20240428_214711_create_table_bookgenre.rs  m20240428_214720_create_table_bookauthor.rs  m20240428_222109_create_table_comment.rs  m20240428_225721_create_table_book_rate.rs  m20240428_230452_create_table_comment_rate.rs
private/: cert.pem  key.pem
src/: main.rs  setup.rs
src/entities/: author.rs  book.rs  book_author.rs  book_genre.rs  book_rate.rs  chapter.rs  comment.rs  comment_rate.rs  genre.rs  mod.rs  prelude.rs  user.rs
src/routes/: author_route.rs  book_author_route.rs  book_genre_route.rs  book_rate_route.rs  book_route.rs  chapter_route.rs  comment_rate_route.rs  comment_route.rs  genre_route.rs  mod.rs  user_route.rs
