[package]
name = "egline-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rocket = { version = "0.5.0", features = ["json"] }
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-cli = "0.12.15"
serde = { version="*", features = ["derive"] }
sha256 = "1.5.0"
utoipa = { version="4.2.1", features = ["rocket_extras"] }
utoipa-swagger-ui = { version="6", features = ["rocket"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
